fix/avatars, validation-animation on firefox, radio-btns in payments

--- a/src/template/profitelo_theme/stylesheets/common/components/interface/preloader-container/preloader-container.sass
+++ b/src/template/profitelo_theme/stylesheets/common/components/interface/preloader-container/preloader-container.sass
@@ -5,7 +5,7 @@
   background: transparent
 
   .content-loader
-    position: fixed
+    position: absolute
     display: flex
     align-items: center
     justify-content: center
@@ -17,8 +17,8 @@
     content: ""
 
     span
-      width: 80px
-      height: 80px
+      width: 64px
+      height: 64px
       border: 1px solid $c-lines
       border-top-color: $c-primary
       border-radius: 50%
