--- a/src/template/profitelo_theme/stylesheets/common/components/settings/modals/general/basic-account-settings/basic-account-settings.sass
+++ b/src/template/profitelo_theme/stylesheets/common/components/settings/modals/general/basic-account-settings/basic-account-settings.sass
@@ -26,7 +26,7 @@
 
   .container-medium
     &.is-bigger
-      min-width: none
+      min-width: inherit
       max-width: none
 
       +smm
